packages/app/client/src/ui/styles/themes/light.css
html {
  /* Globals */
  --global-focus-outline-width: 1px;
  --global-focus-outline-style: solid;
  --global-focus-outline-color: #1177BB;
  --box-shadow-color: var(--neutral-6);

  /* Highlight colors */
  --list-item-color: var(--neutral-9);
  --list-item-selected-color: var(--neutral-2);
  --list-item-hover-bg: var(--neutral-4);
  --list-item-hover-border: 1px dashed transparent;
  --selected-list-item: #CCCEDB;
  --focused-list-item: #DCEBFC;
  --focused-outline: 1px solid #0E369C;
  --focused-selected-highlighted-list-item: #3062D6;
  --focused-selected-list-item-bg: #006AB1;

  /* Alert colors */
  --info-bg: #D6ECF2;
  --info-outline: #007ACC;
  --warning-bg: #F6F5D2;
  --warning-outline: #B89500;
  --error-text: #A1260D;
  --error-bg: #F2DEDE;
  --error-outline: #BE1100;
  --endpoint-warning: var(--neutral-14);

  /* webchat overridden colors */
  /* activity bubbles */
  --webchat-bg: var(--tab-active-tab-bg);
  --webchat-bubble-bg: var(--neutral-2);
  --webchat-bubble-text: var(--neutral-15);
  --webchat-bubble-text-weight: initial;
  --webchat-user-bubble-bg: #3062D6;
  --webchat-user-bubble-text: var(--neutral-1);
  --webchat-selected-activity-bg: #B89500;
  --webchat-selected-activity-text: var(--neutral-1);
  --webchat-timestamp-text: var(--neutral-6);
  --webchat-scrollbar-color: var(--scrollbar-color);

  /* sendbox */
  --webchat-sendbox-bg: var(--neutral-1);
  --webchat-sendbox-text: initial;
  --webchat-buttons-color: var(--neutral-6);
  --webchat-buttons-color-focus: var(--neutral-9);
  --webchat-buttons-dictate: #BE1100;

  /* transcript overlays */
  --webchat-transcript-overlay-bg: rgba(48, 98, 214, .8); /* --webchat-user-bubble-bg */
  --webchat-transcript-overlay-bg-focus: rgba(34, 76, 174, .8); /* darken(--webchat-transcript-overlay-bg, 20%) */
  --webchat-transcript-overlay-text: var(--neutral-1);
  --webchat-transcript-overlay-text-focus: var(--neutral-1);

  /* suggested actions */
  --webchat-sa-bg: var(--webchat-bubble-bg);
  --webchat-sa-border: none;
  --webchat-sa-text: #3794FF;

  /* bot state button */
  --bot-state-button-color: var(--neutral-7);
  --bot-state-button-color-focus: var(--neutral-14);
  --bot-state-diff-indicator-color: #BE1100;

  /* Log panel custom colors */
  --log-panel-timestamp: #327E36;
  --log-panel-link: #007ACC;
  --log-panel-entry-hover-bg: var(--neutral-4);
  --log-panel-entry-inspected-bg: var(--neutral-5);
  --log-panel-item-info: var(--neutral-16);
  --log-panel-item-debug: var(--neutral-10);
  --log-panel-item-warn: var(--warning-outline);
  --log-panel-item-error: var(--error-text);

  /* nav bar custom colors */
  --nav-bar-bg: var(--neutral-15);
  --nav-icon-color: var(--neutral-1);
  --nav-icon-opacity: .6;
  --nav-icon-color-hover-opacity: 1;
  --nav-focused-tag-bg: #0E70C4;
  --nav-focused-tag-bg-opacity: 1;
  --nav-border-focus: 1px solid #00BCF2;
  --nav-link-selected-border: 1px solid transparent;
  --nav-link-selected-focus: 1px solid var(--nav-bar-bg);
  --nav-link-hover-border: 1px solid transparent;
  --nav-link-badge-color: var(--neutral-1);
  --nav-link-badge-bg: #FF0000;

  /* input[type="text"] */
  --input-color: var(--neutral-12);
  --input-bg: var(--neutral-1);
  --input-label-color: var(--neutral-14);
  --input-label-color-disabled: var(--neutral-10);
  --input-border: 1px solid #C8C8C8;
  --input-border-focus: 2px solid #00BCF2;
  --input-border-error: 1px solid var(--error-outline);
  --input-placeholder-color: var(--neutral-9);
  --input-border-disabled: 1px solid var(--neutral-10);

  /* input[type="checkbox"] */
  --checkbox-checkmark-color: var(--neutral-1);
  --checkbox-checkmark-disabled-color: var(--neutral-8);
  --checkbox-border: 1px solid var(--neutral-10);
  --checkbox-border-disabled: 1px solid var(--neutral-7);
  --checkbox-bg-disabled: var(--neutral-5);
  --checkbox-bg-checked: var(--p-button-bg);

  /* primary button */
  --p-button-color: var(--neutral-2);
  --p-button-color-disabled: var(--neutral-6);
  --p-button-border: 1px solid transparent;
  --p-button-border-focus: 1px solid #00BCF2;
  --p-button-border-hover: 1px solid transparent;
  --p-button-border-active: 1px solid transparent;
  --p-button-border-disabled: 1px solid transparent;
  --p-button-opacity-disabled: 1;
  --p-button-bg: #3062D6;
  --p-button-bg-focus: #3062D6;
  --p-button-bg-hover: #2852B2;
  --p-button-bg-active: #214494;
  --p-button-bg-disabled: var(--neutral-3);

  /* secondary button */
  --s-button-color: var(--neutral-15);
  --s-button-color-disabled: var(--neutral-3);
  --s-button-border: 1px solid #8A8886;
  --s-button-border-focused: 1px solid transparent;
  --s-button-border-hover: 1px solid #8A8886;
  --s-button-border-active: 1px solid #8A8886;
  --s-button-border-disabled: 1px solid transparent;
  --s-button-opacity-disabled: 1;
  --s-button-bg: var(--neutral-1);
  --s-button-bg-focus: var(--neutral-1);
  --s-button-bg-hover: #F3F2F1;
  --s-button-bg-active: var(--neutral-5);
  --s-button-bg-disabled: var(--neutral-2);

  /* link button */
  --l-button-color: var(--link-color);
  --l-button-background: transparent;
  --l-button-border: var(--p-button-border);
  --l-button-border-active: var(--s-button-border-active);
  --l-button-border-hover: var(--s-button-border-hover);
  --l-button-border-disabled: var(--s-button-border-disabled);
  --l-button-opacity-disabled: var(--s-button-opacity-disabled);
  --l-button-border-focused: var(--p-button-border-focus);
  --l-button-disabled-color: var(--neutral-9);

  /* Dialogs & Modals */
  --dialog-bg: var(--neutral-2);
  --dialog-color: var(--neutral-14);
  --dialog-error-color: var(--error-text);
  --dialog-close-icon-color: var(--neutral-14);
  --dialog-link-color: #0E639C;
  --dialog-link-focus-color: #0E639C;

  /* Services Explorer */
  --explorer-panel-bg: var(--neutral-3);
  --explorer-panel-name-color: var(--neutral-9);
  --explorer-panel-icon-color: var(--neutral-14);
  --explorer-panel-group-title-bg: var(--neutral-5);
  --explorer-panel-group-title-color: var(--neutral-12);
  --explorer-panel-group-border: 1px solid transparent;
  --explorer-panel-empty-message-color: var(--neutral-15);
  --service-panescrollbar-color: var(--neutral-13);

  /* Explorer Bar */
  --explorer-bar-header-bg: var(--neutral-3);

  /* Tabs */
  --tab-color: var(--explorer-panel-group-title-color);
  --tab-bar-bg: var(--neutral-2);
  --tab-bg: var(--neutral-2);
  --tab-border: 1px solid transparent;
  --tab-hover-border: 1px solid transparent;
  --tab-active-tab-inner-border: 1px solid transparent;
  --tab-active-tab-bg: var(--neutral-1);
  --tab-focus-border: 1px solid var(--global-focus-outline-color);
  --tab-separator-bg: var(--neutral-4);
  --tab-icon-color: var(--explorer-panel-group-title-color);
  --tab-icon-hover-color: var(--neutral-15);

  /* Notifications */
  --notification-bg: rgba(128, 128, 128, 0.2);
  --notification-message-color: var(--neutral-12);
  --notification-timestamp-color: var(--neutral-8);
  --notification-close-icon-color: var(--neutral-13);
  --notification-border: 1px solid transparent;
  --notifications-clear-all-btn-color: #3062D6;
  --notification-inner-border-display: none;
  --notification-inner-border: 1px solid transparent;

  /* toolbar */
  --toolbar-bg: var(--tab-active-tab-bg);
  --toolbar-border: none;
  --toolbar-border-bottom: 1px solid var(--neutral-5);
  --toolbar-icon-color: #3062D6;
  --toolbar-text-color: var(--neutral-12);
  --toolbar-text-active: var(--neutral-16);
  --toolbar-button-hover-border: 1px solid transparent;
  --splitter-border: var(--toolbar-border-bottom);

  /* Welcome page */
  --welcome-page-bg: var(--tab-active-tab-bg);
  --welcome-page-ver: #717171;
  --welcome-how-to-border: var(--neutral-6);
  --welcome-how-to-test: var(--p-button-bg);
  --welcome-beta-label: var(--warning-outline);
  --my-bots-well-bg: var(--neutral-3);
  --my-bots-well-border: 0;
  --my-bots-entry-bg: var(--neutral-4);
  --my-bots-entry-border: 1px solid transparent;
  --my-bots-entry-color: var(--neutral-12);
  --my-bots-path-color: var(--neutral-10);
  --my-bots-path-hover-color: var(--neutral-11);
  --my-bots-scrollbar-color: rgba(136, 136, 136, 0.5);

  /* Status Bar */
  --status-bar-bg: #007ACC;
  --status-bar-color: #FFFFFF;

  /* Links */
  --link-color: #007ACC;
  --link-color-disabled: #C8C8C8;
  --inspector-link-color: var(--link-color);

  /* Split Button */
  --split-button-color: var(--neutral-12);
  --split-button-pressed-color: var(--neutral-16);
  --split-button-disabled-color: var(--neutral-7);
  --split-button-icon-color: #3062D6;
  --split-button-hover-bg-color: var(--neutral-2);
  --split-button-hover-outline: transparent;
  --split-button-selected-bg-color: var(--neutral-4);
  --split-button-selected-outline: transparent;
  --split-button-expanded-outline: transparent;
  --split-button-separator-bg-color: #C8C8C8;
  --split-button-panel-color: var(--neutral-16);
  --split-button-panel-border: 0;
  --split-button-panel-bg-color: var(--neutral-1);
  --split-button-selected-item-bg-color: var(--neutral-3);
  --split-button-selected-item-border: 1px solid #00BCF2;

  /* Icons */
  --cosmos-db-contrast: var(--neutral-16);

  /* Scrollbar */
  --scrollbar-color: var(--neutral-6);

  /* Inspector accessory buttons */
  --accessory-button-color: var(--s-button-color);

  /* Auto Complete */
  --auto-complete-results-opacity: 0.9;
  --auto-complete-warning-color: var(--endpoint-warning);

  /* Service Picker */
  --service-picker-list-bg-color: var(--neutral-3);
  --service-picker-list-border: 1px solid transparent;
  --service-picker-scrollbar-thumb: var(--scrollbar-color);
  --service-picker-scrollbar-track: var(--neutral-4);
  --service-picker-select-all-border: 1px solid transparent;

  /* Radio buttons */
  --radio-bg-color: var(--neutral-1);
  --radio-border-color: var(--neutral-16);
  --radio-selected-border-color: #3B99FC;

  /* MDI Component */
  --mdi-bg: var(--neutral-2);
  --mdi-img-bg: var(--neutral-2);

  /* App Menu */
  --app-menu-bg-color: #F4F4F4;
  --app-menu-color: #2B2B2B;
  --app-menu-hover-color: #2B2B2B;
  --app-menu-hover-bg-color: #E8E8E8;
  --app-menu-hover-border: 1px dashed transparent;

  /* Menu Component */
  --menu-box-shadow: rgb(168, 168, 168) 0px 2px 4px;
  --menu-border: 0;
  --menu-bg-color: #F4F4F4;
  --menu-item-hover-bg-color: #007ACC;
  --menu-item-color: #2B2B2B;
  --menu-item-hover-color: #FFFFFF;
  --menu-item-disabled-color: #8A8A8A;
  --menu-item-hover-outline: none;
  --menu-separator-color: #2B2B2B;
  --menu-submenu-top-adjustment: -8px;
}

